--- a/app/src/main/res/layout/activity_website.xml
+++ b/app/src/main/res/layout/activity_website.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".WebsiteActivity">
 
+
     <WebView
+        android:id="@+id/tvwebView2"
         android:layout_width="409dp"
         android:layout_height="729dp"
         android:layout_marginTop="1dp"
@@ -16,4 +18,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
